--- a/assignments/Ch.04.Exercises-FSDS-MT22.ipynb
+++ b/assignments/Ch.04.Exercises-FSDS-MT22.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "5964f5b7-64a6-4bf6-b331-b38c7e4e90f2",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "6da13185-3935-4c3b-b45b-12605ff78a07",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "750c3cb3-1f0c-41f9-b9c9-32ee0d180e0f",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "cad7d8ff-ebcb-4c8f-a4bc-33ea9a7bc810",
    "metadata": {},
    "outputs": [
@@ -136,12 +136,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                            title                                  url    ups\n",
-      "0            Look at his smile :)      https://i.imgur.com/H9tgQ0x.png  73112\n",
-      "1  Still friends 37 years later 💜  https://i.redd.it/er7dsw87b8u91.jpg  70753\n",
-      "2            He is the chosen one  https://i.redd.it/i7zy6j11o6u91.jpg  19215\n",
-      "3                Important Update  https://i.redd.it/zp8an8p15au91.png   7784\n",
-      "4                 this is so true  https://i.redd.it/7prhc0hpq6u91.jpg   6747\n"
+      "                                          data.title  data.ups  \\\n",
+      "0  President Biden will make entire 645k federal ...      1226   \n",
+      "1  ‘I regret my country has been absent’: John Ke...      3532   \n",
+      "2  Should Biden declare a 'climate emergency'? 38...        50   \n",
+      "3  Schumer calls for Biden to declare climate eme...        66   \n",
+      "4  Trump’s Last-Minute Attack on Clean Air Faces ...        24   \n",
+      "\n",
+      "                                            data.url  \n",
+      "0  https://electrek.co/2021/01/25/president-biden...  \n",
+      "1  https://www.independent.co.uk/environment/clim...  \n",
+      "2  https://grist.org/climate/38-countries-have-de...  \n",
+      "3  https://thehill.com/homenews/senate/535811-sch...  \n",
+      "4  https://www.commondreams.org/newswire/2021/01/...  \n"
      ]
     }
    ],
@@ -157,37 +164,48 @@
     "    return pd.DataFrame([data[\"data\"] for data in results[\"data\"][\"children\"]])[columns]\n",
     "\n",
     "reddit_url = \"https://api.reddit.com\"\n",
-    "wholesome_url = f\"{reddit_url}/r/wholesomememes/top?t=day&limit=75\"\n",
+    "wholesome_url = f\"{reddit_url}/r/wholesomememes/top?t=year&limit=50\"\n",
     "\n",
-    "new_df = read_results(wholesome_url, columns=[\"title\", \"url\", \"ups\"])\n",
-    "print(new_df.head())\n",
+    "#new_df = read_results(wholesome_url, columns=[\"title\", \"url\", \"ups\"])\n",
+    "#print(new_df.head())\n",
     "\n",
+    "# using the json\n",
+    "json_file = data_dir / \"environment.json\"\n",
+    "with open(json_file, 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "\n",
+    "\n",
+    "environment_df = pd.json_normalize(data[\"data\"][\"children\"])\n",
+    "\n",
+    "small_environment = environment_df[[\"data.title\", \"data.ups\", \"data.url\"]]\n",
+    "print(small_environment.head())\n",
     "# Exercise 2a Answer above here "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "f567c630-eb57-4a00-b683-4095b33903b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "is           6\n",
-       "you          5\n",
-       "to           5\n",
-       "just         4\n",
-       "this         4\n",
-       "i            4\n",
-       "in           4\n",
-       "like         4\n",
-       "my           4\n",
-       "wholesome    4\n",
-       "Name: title, dtype: int64"
+       "the        50\n",
+       "to         47\n",
+       "climate    29\n",
+       "on         26\n",
+       "of         25\n",
+       "and        23\n",
+       "in         22\n",
+       "for        17\n",
+       "a          15\n",
+       "from       14\n",
+       "Name: data.title, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,27 +213,46 @@
    "source": [
     "# Exercise 2b Answer below here \n",
     "# Find most common words in titles\n",
-    "new_df[\"title\"].str.lower().str.split().explode().value_counts().head(10)\n",
+    "small_environment[\"data.title\"].str.lower().str.split().explode().value_counts().head(10)\n",
     "\n",
     "# Exercise 2b Answer above here "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "71d9d55f-93d0-417d-923e-f9ea61353061",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jhr\\AppData\\Local\\Temp\\ipykernel_23320\\1474951417.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  small_environment[\"domain\"] = small_environment[\"data.url\"].apply(parse_url)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "i.redd.it      48\n",
-       "i.imgur.com     3\n",
-       "imgur.com       2\n",
+       "www.reddit.com             7\n",
+       "www.theguardian.com        5\n",
+       "www.commondreams.org       4\n",
+       "biologicaldiversity.org    4\n",
+       "thehill.com                3\n",
+       "www.nytimes.com            3\n",
+       "electrek.co                2\n",
+       "www.independent.co.uk      2\n",
+       "news.trust.org             2\n",
+       "www.bbc.co.uk              2\n",
        "Name: domain, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,10 +262,10 @@
     "def parse_url(url: str) -> str:\n",
     "    return urlparse(url).netloc\n",
     "\n",
-    "new_df[\"domain\"] = new_df[\"url\"].apply(parse_url)\n",
+    "small_environment[\"domain\"] = small_environment[\"data.url\"].apply(parse_url)\n",
     "\n",
     "# most common domains\n",
-    "new_df[\"domain\"].value_counts().head(10)\n",
+    "small_environment[\"domain\"].value_counts().head(10)\n",
     "\n",
     "# Exercise 2c Answer above here "
    ]
@@ -254,26 +291,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "544c55c4-5f10-4992-b11d-795d5eda84f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       id                 timestamp  minor               comment     model  \\\n",
+      "0  246479 2001-03-17 06:29:52+00:00    NaN                     *  wikitext   \n",
+      "1  246480 2001-03-26 22:35:32+00:00    NaN                     *  wikitext   \n",
+      "2   18191 2002-02-25 14:51:43+00:00    NaN  Automated conversion  wikitext   \n",
+      "3   18192 2002-02-25 14:52:12+00:00    NaN          term in bold  wikitext   \n",
+      "4   18817 2002-02-25 15:43:11+00:00    NaN     linking mass noun  wikitext   \n",
+      "\n",
+      "        format                             sha1 contributor.username  \\\n",
+      "0  text/x-wiki  4bi0lqmoh3d6z1tv2dg3zfjaqt20fj3      208.245.214.xxx   \n",
+      "1  text/x-wiki  lv1z2dzhms5ys77nfrgq58mem9ptdik       192.75.241.xxx   \n",
+      "2  text/x-wiki  rtvjc8fo6z391pjlte9kw8e7wi02enn    Conversion script   \n",
+      "3  text/x-wiki  1x390dickut12wma4fuy2eezu138o37                  NaN   \n",
+      "4  text/x-wiki  gprvn7s0a4k8jrjcou6lq139xxv1hde                  NaN   \n",
+      "\n",
+      "  contributor.id text.@bytes text.@xml:space  \\\n",
+      "0              0         542        preserve   \n",
+      "1              0         559        preserve   \n",
+      "2        1226483         556        preserve   \n",
+      "3            NaN         565        preserve   \n",
+      "4            NaN         569        preserve   \n",
+      "\n",
+      "                                          text.#text parentid  contributor.ip  \\\n",
+      "0  The word <i>data</i> is the plural of <i>datum...      NaN             NaN   \n",
+      "1  The word <i>data</i> is the plural of <i>datum...   246479             NaN   \n",
+      "2  The word <i>data</i> is the plural of <i>datum...   246480             NaN   \n",
+      "3  The word '''data''' is the plural of <i>datum<...    18191  213.253.40.156   \n",
+      "4  The word '''data''' is the plural of <i>datum<...    18192  213.253.40.156   \n",
+      "\n",
+      "  contributor.@deleted  \n",
+      "0                  NaN  \n",
+      "1                  NaN  \n",
+      "2                  NaN  \n",
+      "3                  NaN  \n",
+      "4                  NaN  \n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3a Answer below here\n",
+    "wiki_path = next(data_dir.glob(\"*Wiki*.xml\"))\n",
     "\n",
+    "# parse the xml file to dictionary\n",
+    "import xmltodict\n",
+    "with open(wiki_path, 'r', encoding=\"utf8\") as f:\n",
+    "    wiki_dict = xmltodict.parse(f.read())\n",
     "\n",
+    "wikidf = pd.json_normalize(wiki_dict[\"mediawiki\"][\"page\"][\"revision\"])\n",
+    "wikidf[\"timestamp\"] = pd.to_datetime(wikidf[\"timestamp\"])\n",
+    "print(wikidf.head())\n",
     "# EXercise 3a Answer above here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "id": "6abbdf59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>text.#text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001-03-17 06:29:52+00:00</td>\n",
+       "      <td>The word &lt;i&gt;data&lt;/i&gt; is the plural of &lt;i&gt;datum...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001-03-26 22:35:32+00:00</td>\n",
+       "      <td>The word &lt;i&gt;data&lt;/i&gt; is the plural of &lt;i&gt;datum...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002-02-25 14:51:43+00:00</td>\n",
+       "      <td>The word &lt;i&gt;data&lt;/i&gt; is the plural of &lt;i&gt;datum...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2002-02-25 14:52:12+00:00</td>\n",
+       "      <td>The word '''data''' is the plural of &lt;i&gt;datum&lt;...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2002-02-25 15:43:11+00:00</td>\n",
+       "      <td>The word '''data''' is the plural of &lt;i&gt;datum&lt;...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  timestamp                                         text.#text\n",
+       "0 2001-03-17 06:29:52+00:00  The word <i>data</i> is the plural of <i>datum...\n",
+       "1 2001-03-26 22:35:32+00:00  The word <i>data</i> is the plural of <i>datum...\n",
+       "2 2002-02-25 14:51:43+00:00  The word <i>data</i> is the plural of <i>datum...\n",
+       "3 2002-02-25 14:52:12+00:00  The word '''data''' is the plural of <i>datum<...\n",
+       "4 2002-02-25 15:43:11+00:00  The word '''data''' is the plural of <i>datum<..."
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wikidf[[\"timestamp\", \"text.#text\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0e944014",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2010-05-14 22:59:49+0000', tz='UTC')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wikidf[\"timestamp\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "fb4d4201-a466-4fe1-9e35-0a29c43cd795",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Earliest timestamp: 2005-08-25 06:17:15+00:00\n",
+      "Latest timestamp: 2005-11-23 21:37:48+00:00\n",
+      "Total duration: 90 days\n",
+      "DIKW was removed on the following dates: ['2005-11-04', '2005-11-24']\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3b Answer below here\n",
+    "dikwdf = wikidf[[\"timestamp\", \"text.#text\"]].dropna().rename(columns={\"text.#text\": \"text\"})\n",
+    "dikwdf.dropna(inplace=True)\n",
     "\n",
+    "smalldikwdf = dikwdf[dikwdf[\"text\"].str.contains(\"dikw\", na=False, case=False)]\n",
+    "\n",
+    "\n",
+    "# earliest timestamp\n",
+    "earliest_stamp = smalldikwdf[\"timestamp\"].min()\n",
+    "\n",
+    "# latest timestamp\n",
+    "latest_stamp = smalldikwdf[\"timestamp\"].max()\n",
+    "\n",
+    "# time difference in days\n",
+    "time_diff = (latest_stamp - earliest_stamp).days\n",
+    "\n",
+    "# Find the dates where the word was removed\n",
+    "has_dikw = dikwdf[\"text\"].str.contains(\"dikw\", na=False, case=False)\n",
+    "dikw_removed = ~has_dikw & has_dikw.shift(1, fill_value=False)\n",
+    "dikw_removed_dates = dikwdf.loc[dikw_removed, \"timestamp\"].dt.strftime(\"%Y-%m-%d\").tolist()\n",
+    "\n",
+    "print(f\"Earliest timestamp: {earliest_stamp}\\nLatest timestamp: {latest_stamp}\\nTotal duration: {time_diff} days\\nDIKW was removed on the following dates: {dikw_removed_dates}\")\n",
     "\n",
     "# EXercise 3b Answer above here"
    ]
