--- a/assignments/Ch.05.Exercises-FSDS-MT222.ipynb
+++ b/assignments/Ch.05.Exercises-FSDS-MT222.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "import json\n",
     "from pathlib import Path\n",
     "from typing import Optional, List, Dict"
@@ -56,7 +56,8 @@
     }
    ],
    "source": [
-    "# Exercise 1 below here \n",
+    "# Exercise 1 below here\n",
+    "\n",
     "\n",
     "def read_tweets(file_path: Path) -> pd.DataFrame:\n",
     "    \"\"\"Reads a json file to pandas dataframe\"\"\"\n",
@@ -67,9 +68,16 @@
     "\n",
     "tweet_df = read_tweets(next(Path(\"../data\").glob(\"*tweets.json\")))\n",
     "users_df = read_tweets(next(Path(\"../data\").glob(\"*users.json\")))\n",
-    "merge_df = pd.merge(tweet_df, users_df, left_on=\"author_id\", right_on=\"id\", how=\"left\", suffixes=(\"_tweet\", \"_user\"))\n",
+    "merge_df = pd.merge(\n",
+    "    tweet_df,\n",
+    "    users_df,\n",
+    "    left_on=\"author_id\",\n",
+    "    right_on=\"id\",\n",
+    "    how=\"left\",\n",
+    "    suffixes=(\"_tweet\", \"_user\"),\n",
+    ")\n",
     "\n",
-    "print(len(tweet_df),len(users_df),len(merge_df))\n",
+    "print(len(tweet_df), len(users_df), len(merge_df))\n",
     "# Should be 100 79 100"
    ]
   },
@@ -107,8 +115,10 @@
     "over1k_pctmention = merge_df.loc[over1k, \"entities.mentions\"].notna().mean()\n",
     "under1k_pctmention = merge_df.loc[~over1k, \"entities.mentions\"].notna().mean()\n",
     "\n",
-    "print(f\"The percentage of tweets from those with over 1k followers that have mentions is {over1k_pctmention:0.1%} \"\n",
-    "      f\"The percentage of tweets from those with under 1k followers that have mentions is {under1k_pctmention:0.1%}\")\n",
+    "print(\n",
+    "    f\"The percentage of tweets from those with over 1k followers that have mentions is {over1k_pctmention:0.1%} \"\n",
+    "    f\"The percentage of tweets from those with under 1k followers that have mentions is {under1k_pctmention:0.1%}\"\n",
+    ")\n",
     "\n",
     "# Should be 29 for over1k and 71 for under1k\n",
     "# And therefore should be 24.1% and 11.3% respectively."
@@ -323,7 +333,9 @@
    ],
    "source": [
     "# Exercise 3. Answer below here\n",
-    "merge_df.groupby(\"author_id\")[[\"public_metrics.retweet_count\", \"public_metrics.like_count\"]].agg([\"max\", \"min\", \"mean\"])\n",
+    "merge_df.groupby(\"author_id\")[\n",
+    "    [\"public_metrics.retweet_count\", \"public_metrics.like_count\"]\n",
+    "].agg([\"max\", \"min\", \"mean\"])\n",
     "# Should be one line"
    ]
   },
@@ -344,15 +356,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def get_taglist(tag_list_full: Optional[List[Dict[str, str]]]) -> List[str]:\n",
     "    if type(tag_list_full) is not list:\n",
     "        return []\n",
-    "    return [x['tag'] for x in tag_list_full]\n",
+    "    return [x[\"tag\"] for x in tag_list_full]\n",
+    "\n",
     "\n",
     "new_df = merge_df.copy()\n",
-    "new_df['tags'] = new_df['entities.hashtags'].map(get_taglist)"
+    "new_df[\"tags\"] = new_df[\"entities.hashtags\"].map(get_taglist)"
    ]
   },
   {
@@ -382,12 +393,14 @@
     }
    ],
    "source": [
-    "long_df = new_df[['id_tweet','tags','username']].explode('tags')\n",
+    "long_df = new_df[[\"id_tweet\", \"tags\", \"username\"]].explode(\"tags\")\n",
     "\n",
     "print(f\"The length of the exploded data by hashtag is {len(long_df)}\")\n",
-    "print(\"The top ten hashtags are as follows:\",\n",
-    "       long_df['tags'].value_counts()[:10],\n",
-    "      sep=\"\\n\")"
+    "print(\n",
+    "    \"The top ten hashtags are as follows:\",\n",
+    "    long_df[\"tags\"].value_counts()[:10],\n",
+    "    sep=\"\\n\",\n",
+    ")"
    ]
   },
   {
@@ -424,8 +437,8 @@
     "import dotenv\n",
     "\n",
     "ENV_PATH = f\"..{os.sep}.env\"\n",
-    "dotenv.load_dotenv(ENV_PATH) # This will refresh the environment variables\n",
-    "print(len(os.environ.get('TWITTER_BEARER_TOKEN')))"
+    "dotenv.load_dotenv(ENV_PATH)  # This will refresh the environment variables\n",
+    "print(len(os.environ.get(\"TWITTER_BEARER_TOKEN\")))"
    ]
   },
   {
@@ -449,20 +462,20 @@
     "headers = {\"Authorization\": f\"Bearer {BEARER}\"}\n",
     "\n",
     "QUERY = \"(dalle2) -is:retweet\"\n",
-    "MAX_RESULTS = 100 \n",
+    "MAX_RESULTS = 100\n",
     "\n",
-    "params={\"query\": QUERY,\n",
-    "        \"max_results\":MAX_RESULTS}\n",
+    "params = {\"query\": QUERY, \"max_results\": MAX_RESULTS}\n",
     "\n",
-    "params['expansions'] = \"author_id,geo.place_id\"\n",
-    "params['tweet.fields'] = \"entities,public_metrics\"\n",
-    "params['user.fields'] = \"id,username,name,description,public_metrics\"\n",
-    "params['place.fields'] = \"id,country,country_code,full_name\"\n",
+    "params[\"expansions\"] = \"author_id,geo.place_id\"\n",
+    "params[\"tweet.fields\"] = \"entities,public_metrics\"\n",
+    "params[\"user.fields\"] = \"id,username,name,description,public_metrics\"\n",
+    "params[\"place.fields\"] = \"id,country,country_code,full_name\"\n",
     "\n",
     "response = requests.get(URL, headers=headers, params=params)\n",
     "\n",
-    "assert response.status_code == 200, \\\n",
-    "    f\"Code {response.status_code}. See error: {response.json()}\"\n",
+    "assert (\n",
+    "    response.status_code == 200\n",
+    "), f\"Code {response.status_code}. See error: {response.json()}\"\n",
     "\n",
     "tweets = response.json()\n",
     "print(tweets.keys())"
@@ -475,13 +488,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json \n",
+    "import json\n",
     "\n",
-    "json.dump(tweets['data'], \n",
-    "          open(\"dalle2_oct18_2022_tweets.json\",'w')) \n",
+    "json.dump(tweets[\"data\"], open(\"dalle2_oct18_2022_tweets.json\", \"w\"))\n",
     "\n",
-    "json.dump(tweets['includes']['users'],\n",
-    "          open(\"dalle2_oct18_2022_users.json\",'w')) "
+    "json.dump(tweets[\"includes\"][\"users\"], open(\"dalle2_oct18_2022_users.json\", \"w\"))"
    ]
   }
  ],
