--- a/assignments/Ch.05.Exercises-FSDS-MT222.ipynb
+++ b/assignments/Ch.05.Exercises-FSDS-MT222.ipynb
@@ -73,8 +73,8 @@
     "DATA_DIR = Path(\"../data\")\n",
     "\n",
     "\n",
-    "tweet_df = read_tweets(find_file(DATA_DIR, \"*tweets.json\"))\n",
-    "users_df = read_tweets(find)\n",
+    "tweet_df = read_tweets(find_file(DATA_DIR, file_pattern=\"*tweets.json\"))\n",
+    "users_df = read_tweets(find_file(DATA_DIR, file_pattern=\"*users.json\"))\n",
     "merge_df = pd.merge(tweet_df, users_df, left_on=\"author_id\", right_on=\"id\", how=\"left\", suffixes=(\"_tweet\", \"_user\"))\n",
     "\n",
     "print(len(tweet_df),len(users_df),len(merge_df))\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b6c1d9fa-04d7-4f0f-a143-09ff826335c2",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cdb9a699-2086-4d29-ac11-44b79e2ac4a8",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f4039821-6b19-4efa-9836-c9daed949566",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [8], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m ENV_PATH \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m..\u001b[39m\u001b[39m{\u001b[39;00mos\u001b[39m.\u001b[39msep\u001b[39m}\u001b[39;00m\u001b[39m.env\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m dotenv\u001b[39m.\u001b[39mload_dotenv(ENV_PATH) \u001b[39m# This will refresh the environment variables\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39;49m(os\u001b[39m.\u001b[39;49menviron\u001b[39m.\u001b[39;49mget(\u001b[39m'\u001b[39;49m\u001b[39mTWITTER_BEARER_TOKEN\u001b[39;49m\u001b[39m'\u001b[39;49m)))\n",
+      "Cell \u001b[1;32mIn [7], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m ENV_PATH \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m..\u001b[39m\u001b[39m{\u001b[39;00mos\u001b[39m.\u001b[39msep\u001b[39m}\u001b[39;00m\u001b[39m.env\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m dotenv\u001b[39m.\u001b[39mload_dotenv(ENV_PATH) \u001b[39m# This will refresh the environment variables\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39;49m(os\u001b[39m.\u001b[39;49menviron\u001b[39m.\u001b[39;49mget(\u001b[39m'\u001b[39;49m\u001b[39mTWITTER_BEARER_TOKEN\u001b[39;49m\u001b[39m'\u001b[39;49m)))\n",
       "\u001b[1;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
      ]
     }
