update notebook (with working stuff)

--- a/assignments/Ch.07.Exercises-FSDS-MT222.ipynb
+++ b/assignments/Ch.07.Exercises-FSDS-MT222.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 1,
    "id": "6610c567-3d61-4842-a6bd-240102b14edd",
    "metadata": {},
    "outputs": [
@@ -35,17 +35,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rishi Sunak has the most mentions overall with 21468 tweets\n",
+      "Rishi Sunak has the most mentions overall with 39671 tweets\n",
       "name            hour\n",
-      "Rishi Sunak     13      692.142857\n",
-      "                14      649.000000\n",
-      "                15      487.571429\n",
-      "Boris Johnson   20      148.714286\n",
-      "                18      130.285714\n",
-      "                19      125.714286\n",
-      "Penny Mordaunt  17       48.142857\n",
-      "                18       42.571429\n",
-      "                20       42.428571\n",
+      "Rishi Sunak     13      687.571429\n",
+      "                14      645.000000\n",
+      "                15      483.714286\n",
+      "Boris Johnson   20      146.857143\n",
+      "                18      127.857143\n",
+      "                19      124.000000\n",
+      "Penny Mordaunt  15       39.571429\n",
+      "                16       32.571429\n",
+      "                11       30.571429\n",
       "Name: tweet_count, dtype: float64\n"
      ]
     }
@@ -120,15 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "id": "ad2fd6f0-50db-4cd7-a1e2-25efab17dab2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Answer 2 below here \n",
     "search_url = \"https://api.twitter.com/2/tweets/search/recent\"\n",
-    "international_query = \"kpop has:geo\"\n",
-    "params = {\"query\": international_query, \"tweet.fields\": \"text,author_id,created_at,geo\",\"expansions\":\"geo.place_id\", \"place.fields\": \"country\", \"max_results\": 100}\n",
+    "international_query = \"football has:geo\"\n",
+    "params = {\"query\": international_query, \"tweet.fields\": \"text,author_id,created_at,geo\",\"expansions\":\"geo.place_id\", \"place.fields\": \"country,id,country_code,full_name\", \"max_results\": 100}\n",
     "response = requests.get(search_url, headers=headers, params=params)\n",
     "\n",
     "\n",
@@ -137,54 +137,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "d275f325",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "Forbidden",
-     "evalue": "403 Forbidden\nWhen authenticating requests to the Twitter API v2 endpoints, you must use keys and tokens from a Twitter developer App that is attached to a Project. You can create a project via the developer portal.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mForbidden\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [118], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m client \u001b[39m=\u001b[39m tweepy\u001b[39m.\u001b[39mClient(config[\u001b[39m\"\u001b[39m\u001b[39mbearer_token\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m      6\u001b[0m \u001b[39m# verify credentials\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m response_test \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39;49msearch_all_tweets(query\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mkpop has:geo -is:retweet\u001b[39;49m\u001b[39m\"\u001b[39;49m, tweet_fields\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mtext\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mauthor_id\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mcreated_at\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mgeo\u001b[39;49m\u001b[39m\"\u001b[39;49m], expansions\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mgeo.place_id\u001b[39;49m\u001b[39m\"\u001b[39;49m], place_fields\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mcountry\u001b[39;49m\u001b[39m\"\u001b[39;49m], max_results\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m, )\n",
-      "File \u001b[1;32mc:\\Users\\jhr\\Anaconda3\\envs\\sdspython\\lib\\site-packages\\tweepy\\client.py:1145\u001b[0m, in \u001b[0;36mClient.search_all_tweets\u001b[1;34m(self, query, **params)\u001b[0m\n\u001b[0;32m   1053\u001b[0m \u001b[39m\"\"\"search_all_tweets( \\\u001b[39;00m\n\u001b[0;32m   1054\u001b[0m \u001b[39m    query, *, end_time=None, expansions=None, max_results=None, \\\u001b[39;00m\n\u001b[0;32m   1055\u001b[0m \u001b[39m    media_fields=None, next_token=None, place_fields=None, \\\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1142\u001b[0m \u001b[39m.. _pagination: https://developer.twitter.com/en/docs/twitter-api/tweets/search/integrate/paginate\u001b[39;00m\n\u001b[0;32m   1143\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1144\u001b[0m params[\u001b[39m\"\u001b[39m\u001b[39mquery\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m query\n\u001b[1;32m-> 1145\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_make_request(\n\u001b[0;32m   1146\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39mGET\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39m/2/tweets/search/all\u001b[39;49m\u001b[39m\"\u001b[39;49m, params\u001b[39m=\u001b[39;49mparams,\n\u001b[0;32m   1147\u001b[0m     endpoint_parameters\u001b[39m=\u001b[39;49m(\n\u001b[0;32m   1148\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mend_time\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mexpansions\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mmax_results\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mmedia.fields\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m   1149\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mnext_token\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mplace.fields\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mpoll.fields\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mquery\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m   1150\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39msince_id\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39msort_order\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mstart_time\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mtweet.fields\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m   1151\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39muntil_id\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39muser.fields\u001b[39;49m\u001b[39m\"\u001b[39;49m\n\u001b[0;32m   1152\u001b[0m     ), data_type\u001b[39m=\u001b[39;49mTweet\n\u001b[0;32m   1153\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\jhr\\Anaconda3\\envs\\sdspython\\lib\\site-packages\\tweepy\\client.py:126\u001b[0m, in \u001b[0;36mBaseClient._make_request\u001b[1;34m(self, method, route, params, endpoint_parameters, json, data_type, user_auth)\u001b[0m\n\u001b[0;32m    122\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_make_request\u001b[39m(\u001b[39mself\u001b[39m, method, route, params\u001b[39m=\u001b[39m{}, endpoint_parameters\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    123\u001b[0m                   json\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, data_type\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, user_auth\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[0;32m    124\u001b[0m     request_params \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_process_params(params, endpoint_parameters)\n\u001b[1;32m--> 126\u001b[0m     response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrequest(method, route, params\u001b[39m=\u001b[39;49mrequest_params,\n\u001b[0;32m    127\u001b[0m                             json\u001b[39m=\u001b[39;49mjson, user_auth\u001b[39m=\u001b[39;49muser_auth)\n\u001b[0;32m    129\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreturn_type \u001b[39mis\u001b[39;00m requests\u001b[39m.\u001b[39mResponse:\n\u001b[0;32m    130\u001b[0m         \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\jhr\\Anaconda3\\envs\\sdspython\\lib\\site-packages\\tweepy\\client.py:99\u001b[0m, in \u001b[0;36mBaseClient.request\u001b[1;34m(self, method, route, params, json, user_auth)\u001b[0m\n\u001b[0;32m     97\u001b[0m     \u001b[39mraise\u001b[39;00m Unauthorized(response)\n\u001b[0;32m     98\u001b[0m \u001b[39mif\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code \u001b[39m==\u001b[39m \u001b[39m403\u001b[39m:\n\u001b[1;32m---> 99\u001b[0m     \u001b[39mraise\u001b[39;00m Forbidden(response)\n\u001b[0;32m    100\u001b[0m \u001b[39mif\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code \u001b[39m==\u001b[39m \u001b[39m404\u001b[39m:\n\u001b[0;32m    101\u001b[0m     \u001b[39mraise\u001b[39;00m NotFound(response)\n",
-      "\u001b[1;31mForbidden\u001b[0m: 403 Forbidden\nWhen authenticating requests to the Twitter API v2 endpoints, you must use keys and tokens from a Twitter developer App that is attached to a Project. You can create a project via the developer portal."
-     ]
-    }
-   ],
-   "source": [
-    "# Get the data\n",
-    "import tweepy\n",
-    "\n",
-    "# authentication\n",
-    "client = tweepy.Client(config[\"bearer_token\"])\n",
-    "# verify credentials\n",
-    "response_test = client.search_recent_tweets(query=\"kpop -is:retweet\", tweet_fields=[\"text\", \"author_id\", \"created_at\", \"geo\"], expansions=[\"geo.place_id\"], place_fields=[\"country\"], max_results=100, )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "0fb3ef25",
+   "execution_count": 3,
+   "id": "8855bf44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'place_id': '62f9f7941af63107'}]"
+       "country_code\n",
+       "US              0.26\n",
+       "GB              0.19\n",
+       "SA              0.18\n",
+       "IN              0.03\n",
+       "NL              0.03\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[tweet.geo for tweet in response_test.data if tweet.geo is not None]"
+    "locations = pd.json_normalize(response.json()[\"includes\"][\"places\"])\n",
+    "tweets = pd.json_normalize(response.json()[\"data\"])\n",
+    "country_counts = pd.merge(tweets, locations, left_on=\"geo.place_id\", right_on=\"id\")[[\"text\", \"full_name\", \"country_code\"]].value_counts(subset=[\"country_code\"])\n",
+    "country_frequencies = country_counts / country_counts.sum()\n",
+    "country_frequencies.head()"
    ]
   },
   {
@@ -206,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "id": "2926da7a-6a8e-4ced-b82f-8217171e4f8a",
    "metadata": {},
    "outputs": [
@@ -214,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of comments (PRAW): 2797\n",
+      "Number of comments (PRAW): 2796\n",
       "Number of comments (PSAW): 1\n"
      ]
     }
@@ -275,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "id": "7206724d-527c-4999-98da-fab9707fe13c",
    "metadata": {},
    "outputs": [
@@ -284,7 +263,7 @@
      "output_type": "stream",
      "text": [
       "Number of comments for y6rsz2 (subreddit: FoodPorn): 219\n",
-      "Number of comments for y6rubo (subreddit: food): 684\n"
+      "Number of comments for y6rubo (subreddit: food): 682\n"
      ]
     }
    ],
@@ -304,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 6,
    "id": "c3cd7932",
    "metadata": {},
    "outputs": [
@@ -332,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 7,
    "id": "4fba09a5",
    "metadata": {},
    "outputs": [
@@ -340,8 +319,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top comment score for y6rsz2 (subreddit: FoodPorn): 290 (3.79%)\n",
-      "Top comment score for y6rubo (subreddit: food): 1817 (13.77%)\n"
+      "Top comment score for y6rsz2 (subreddit: FoodPorn): 289 (3.78%)\n",
+      "Top comment score for y6rubo (subreddit: food): 1818 (13.77%)\n"
      ]
     }
    ],
@@ -361,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 8,
    "id": "b2ae642f",
    "metadata": {},
    "outputs": [
@@ -370,7 +349,7 @@
      "output_type": "stream",
      "text": [
       "Number of negative score comments for y6rsz2 (subreddit: FoodPorn): 13\n",
-      "Number of negative score comments for y6rubo (subreddit: food): 24\n"
+      "Number of negative score comments for y6rubo (subreddit: food): 26\n"
      ]
     }
    ],
