--- a/assignments/Ch.07.Exercises-FSDS-MT222.ipynb
+++ b/assignments/Ch.07.Exercises-FSDS-MT222.ipynb
@@ -115,6 +115,8 @@
    "id": "2fb41787",
    "metadata": {},
    "source": [
+    "**UPDATE**: WUHUUU, I got academic access so now everything works! Shout out to Khyati for figuring out the magic passwords \n",
+    "\n",
     "**NOTE**: This was a total pain to do, and I have wept many tears in not getting this to work. Summa summarum: it is possible to filter with the `has:geo`-query for the premium API. For us mere mortals waiting for recognition from the Twitter gods, there is not much to do as very few (~1 in 100) of the tweets actually has a geo-tag. However, if you masters of SDS figure something out for the free tier, I'm all ears!"
    ]
   },
