--- a/assignments/Ch.07.Exercises-FSDS-MT222.ipynb
+++ b/assignments/Ch.07.Exercises-FSDS-MT222.ipynb
@@ -27,6 +27,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "aaf84c5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "\n",
+    "def read_json(filepath: str) -> dict:\n",
+    "    with open(filepath, 'r') as f:\n",
+    "        return json.load(f)\n",
+    "\n",
+    "# authentication\n",
+    "config = read_json(\"../twitter_config.json\")\n",
+    "headers = {\"Authorization\": f\"Bearer {config['bearer_token']}\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "6610c567-3d61-4842-a6bd-240102b14edd",
    "metadata": {},
@@ -52,13 +72,7 @@
    ],
    "source": [
     "# Answer 1 below here\n",
-    "import requests\n",
-    "import json\n",
-    "import pandas as pd\n",
     "\n",
-    "def read_json(filepath: str) -> dict:\n",
-    "    with open(filepath, 'r') as f:\n",
-    "        return json.load(f)\n",
     "\n",
     "POLITICIAN_DICT = {\n",
     "    \"Boris Johnson\": \"@BorisJohnson\",\n",
@@ -68,9 +82,6 @@
     "\n",
     "count_url = \"https://api.twitter.com/2/tweets/counts/recent\"\n",
     "\n",
-    "# authentication\n",
-    "config = read_json(\"../twitter_config.json\")\n",
-    "headers = {\"Authorization\": f\"Bearer {config['bearer_token']}\"}\n",
     "\n",
     "def create_politician_query(pol_name: str) -> str:\n",
     "    return f\"{POLITICIAN_DICT[pol_name]} {pol_name}\"\n",
@@ -122,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ad2fd6f0-50db-4cd7-a1e2-25efab17dab2",
    "metadata": {},
    "outputs": [],
@@ -130,7 +141,7 @@
     "# Answer 2 below here \n",
     "search_url = \"https://api.twitter.com/2/tweets/search/recent\"\n",
     "international_query = \"football has:geo\"\n",
-    "params = {\"query\": international_query, \"tweet.fields\": \"text,author_id,created_at,geo\",\"expansions\":\"geo.place_id\", \"place.fields\": \"country,id,country_code,full_name\", \"max_results\": 100}\n",
+    "params = {\"query\": international_query, \"tweet.fields\": \"text,author_id,created_at,geo\",\"expansions\":\"geo.place_id\", \"place.fields\": \"id,country_code\", \"max_results\": 100}\n",
     "response = requests.get(search_url, headers=headers, params=params)\n",
     "\n",
     "\n",
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "8855bf44",
    "metadata": {},
    "outputs": [
@@ -147,15 +158,15 @@
      "data": {
       "text/plain": [
        "country_code\n",
-       "US              0.26\n",
-       "GB              0.19\n",
-       "SA              0.18\n",
+       "US              0.46\n",
+       "GB              0.17\n",
+       "SA              0.12\n",
        "IN              0.03\n",
-       "NL              0.03\n",
+       "BR              0.03\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
